Criação do Esqueleto completo, com entidades, repositorio, service e aplicattion.

--- a/Enquete.Infrastructure/Enquete.Infrastructure.csproj
+++ b/Enquete.Infrastructure/Enquete.Infrastructure.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20200721114218_Option.cs" />
+    <Compile Remove="Migrations\20200721114218_Option.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="appsettings.Development.json" />
     <None Remove="appsettings.json" />
   </ItemGroup>
